# fronius-to-influx

./: .gitignore  README.md  json_server.py  pyproject.toml
docker/: Dockerfile
requirements/: dev.txt  prod.txt
src/: dev.py  fronius_to_influx.py
