[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "fronius_to_influx"
version = "0.1.0"
description = "Collect Fronius inverter data and save in InfluxDB"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
dynamic = ["dependencies", "optional-dependencies"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.dynamic]
dependencies = {file = ["requirements/prod.txt"]}

[tool.setuptools.dynamic.optional-dependencies]
dev = {file = ["requirements/dev.txt"]}

